@@ -1,0 +1,30 @@
+HOSTS:
+  el7-auditd-inspec:
+    roles:
+      - primary
+    platform: el-7-x86_64
+    hypervisor: docker
+    image: centos:7
+    docker_cmd: '/usr/sbin/init'
+    docker_preserve_image: true
+    docker_image_commands:
+      # Puppet Deps
+      - 'yum install -y ntpdate rubygems rsync openssl'
+      - 'usermod --password $(echo root | openssl passwd -1 -stdin) root'
+    yum_repos:
+      chef-current:
+        baseurl: 'https://packages.chef.io/repos/yum/current/el/7/$basearch'
+        gpgkeys:
+          - https://packages.chef.io/chef.asc
+      epel:
+        mirrorlist: 'https://mirrors.fedoraproject.org/metalink?repo=epel-7&arch=$basearch'
+        gpgkeys:
+          - https://getfedora.org/static/352C64E5.txt
+    ssh:
+      password: root
+      auth_methods:
+        - password
+
+CONFIG:
+  log_level: verbose
+  type:      aio
