@@ -1,3 +1,10 @@
+* Tue Jan 09 2017 Nick Markowski <nicholas.markowski@onyxpoint.com> - 7.1.3-0
+- Updated compliance suite to use new inspec profile,
+  https://github.com/simp/inspec-profile-disa_stig-el7
+- Removed the el6 nodeset from the compliance suite; there are no
+  simp-supported el6 inspec profiles at this time.
+- Ensured git installed as it's a dependency of our inspec profiles
+
 * Mon Nov 13 2017 Nick Miller <nick.miller@onyxpoint.com> - 7.1.2-0
 - /var/run/faillock should be tagged under 'login'
 
